webroot/css/custom.css
/* ... */
.invite_email input {
    border-radius: 0;
}
.invite_email .alert {
    border-radius: 0;
    padding: 5px;
    font-size: 12px;    
}
.sub_category1 {
    display: none;
}
.sub_category1.list-group {
    display: none;
    position: absolute;
    top: 58px;
    background-color: #4abac5;
    color: #ffffff;
    padding: 7px 10px;
    z-index: 99;
    float: none;
    width: 735px;
    clear: both;
    min-height: 150px;
}
.sub_category1 a {
    color: #FFFFFF
}
.list_event .thumbnail {
    position: relative;
}
.thumbnail .pull-left.tag {
    position: absolute;
    color: #ffffff;
    top: 5px;
    padding: 5px 5px;
    border: 1px solid #ffffff;
    left: 5px;
    font-size: 12px;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 1);
    font-weight: 0px !important;
}
.thumbnail .pull-right.post {
    position: absolute;
    right: 5px;
    color: #ffffff;
    top: 5px;
    font-size: 12px;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, 1);
}
/*.side_panel .glyphicon-calendar:before {
    font-size: 18px;
    vertical-align: sub;
    margin-right: 2px;
    color: #333333;
}
*/

#reportrange {
    background: #fff;
    cursor: pointer;
    padding: 5px 5px;
    border: 1px solid #ccc;
    width: 100%;
    font-size: 12px
}
.dropdown_txt1 {
    position: absolute;
    left: -9999px;
    visibility: hidden;
    white-space: nowrap;
    font-family: &quot;
    OpenSans&quot;
    , Helvetica, Arial, sans-serif;
    font-size: 12px;
    font-style: normal;
    font-variant-ligatures: normal;
    font-variant-caps: normal;
    font-weight: 400;
    word-spacing: 0px;
    letter-spacing: 0px;
    text-indent: 0px;
    text-rendering: auto;
    text-transform: none;
}
.dropdown_input {
    position: relative;
    vertical-align: top;
    background-color: rgb(255, 255, 255);
}
.dropdown_hint {
    position: absolute;
    top: 0px;
    left: 0px;
    border-color: transparent;
    box-shadow: none;
    background: none 0% 0% / auto repeat scroll padding-box border-box rgb(255, 255, 255);
}
/* carousel */

.media-carousel {
    margin-bottom: 0;
    padding: 0 40px 10px 40px;
    margin-top: 30px;
}
/* Previous button  */

.media-carousel .carousel-control.left {
    left: -12px;
    background-image: none;
    background: none repeat scroll 0 0 #222222;
    border: 4px solid #FFFFFF;
    border-radius: 23px 23px 23px 23px;
    height: 40px;
    width: 40px;
    margin-top: 30px
}
/* Next button  */

.media-carousel .carousel-control.right {
    right: -12px !important;
    background-image: none;
    background: none repeat scroll 0 0 #222222;
    border: 4px solid #FFFFFF;
    border-radius: 23px 23px 23px 23px;
    height: 40px;
    width: 40px;
    margin-top: 30px
}
/* Changes the position of the indicators */

.media-carousel .carousel-indicators {
    right: 50%;
    top: auto;
    bottom: 0px;
    margin-right: -19px;
}
/* Changes the colour of the indicators */

.media-carousel .carousel-indicators li {
    background: #c0c0c0;
}
.media-carousel .carousel-indicators .active {
    background: #333333;
}
.media-carousel img {
    width: 250px;
    height: 100px
}
/* End carousel */
/*Mobile*/

@media (max-width: 767px) {
    .lft_container {
        padding: 10px 10px;
        border-right: 1px solid #ffffff;
    }
    .navbar-nav {
        margin: 5px 0px;
    }
    .mini-submenu .icon-bar {
        background-color: #337ab7!important;
    }
    .category_dropdown.list-group {
        top: 34px;
        left: 0;
        width: 90%
    }
    .profile_img,
    .create_evt {
        margin-bottom: 10px
    }
}
.auto-search {
    border-radius: 0 !important;
}
@media (max-width: 767px) {
    .side_panel {
        margin-right: 15px !important;
    }
    .category_btn {
        display: block !important;
    }
    .search-box-li {
        display: block !important;
        margin-top: 25px;
    }
    .search-box-li .navbar-form {
        margin: 0 !important;
        padding: 10px 0 !important;
    }
    .bootstrap-tagsinput {
        width: 100% !important;
    }
    .category_dropdown,
    .sub_category_dropdown {
        margin-top: 10% !important;
    }
}
.navbar-form.navbar-left {
    margin: 0 !important;
}
.category_btn label {
    margin-bottom: 0 !important;
}
/*
.search-nav {
  width: 58%;
}
.nav.navbar-nav.navbar-right {
  width: 42%;
}
.search-box-li {
  width: 77.99999%;
}
.search-box-li .form-group {
  width: 86.9999%;
}
.search-box-li .navbar-form.navbar-left {
  width: 100%;
}*/

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-width: 0 !important;
}
@media (min-width: 768px) and (max-width: 885px) {
    .sub_category_dropdown,
    .category_dropdown.list-group {
        top: 112px !important;
    }
}
#loading {
    background: #fff url("../img/ajax-loader.gif") no-repeat scroll center center;
    height: 190px;
    margin: 10% auto;
    position: relative;
    top: 50%;
    width: 50px;
    z-index: 1000;
}
.loadingDiv {
    width: 100%; 
    display: none;
}
#eventResponse {
    display: none;
}
.no_events {
    text-align: center;
}
.event-title {
    float: left;
    margin-bottom: 8px;
    /*overflow: hidden;*/
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
}
.launch-map {
    margin-top: 10px;
}
#mapPanel {
    margin-bottom: 15px;
}
#mapPanel .text {
    width: 80%;
    float: left;
    margin-right: 20px;
}
.f-item {
  background-color: #5bc0de;
  border-radius: 3px;
  color: #fff;
  display: inline-block;
  font-size: 11px;
  margin: 0 5px 5px 0;
  padding: 5px 5px 0;
  width: auto;
  display: none;
  text-transform: capitalize;
}
.f-sections {
  border-color: #f0f0f0;
  border-image: none;
  border-style: solid;
  border-width: 0 0 1px;
  display: block;
  margin-bottom: 10px;
  padding-bottom: 5px;
  display: none;
  width: 100%;
}
#filterClearAll:hover, #filterClearAll:focus, #filterDD:hover, #filterDD:focus {
  text-decoration: none;
}
#filterClearAll {
  padding-right: 10px;
}
/* ... */

